# ITK

./: .cirun.yml  .clang-format  .clang-tidy  .editorconfig  .gersemi.config  .git-blame-ignore-revs  .git-remote-files  .gitattributes  .gitignore  .gitmodules  .hooks-config.bash  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  50-GerritCTestConfig.cmake  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeFilters.cmake  CMakeInstallation.cmake  CMakeLists.txt  CMakeSetupConfig.MSC  CMakeVOL.cmake  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CTestConfig.cmake  ChangeLog  Copyright.txt  DartConfig.cmake  Enforcement.md  GOVERNANCE.md  GettingStarted.md  GettingStarted.txt  ISSUE_TEMPLATE.md  ITKConfig.cmake.in  ITKData.readme  ITKLibraryDepends.cmake14.in  LIBMINCConfig.cmake.in  (+56 more)
CMake/itk-base/: CMakeLists.txt  itk-base-config-version.cmake  itk-base-config.cmake  itk-module-build.cmake.in  itk-module-config-build.cmake.in  itk-module-install.cmake.in
Code/: CMakeLists.txt  DoxygenMainPage.h  Iterators.dox  MainPage.dox  Modules.dox  NeighborhoodIterators.dox  doxygen.config.in
Code/Algorithms/: CMakeLists.txt  Registration.dox  itk3DBalloonForceFilter.h  itk3DBalloonForceFilter.txx  itkActiveShapeModelCalculator.h  itkActiveShapeModelCalculator.txx  itkActiveShapeModelGradientSearchMethod.h  itkActiveShapeModelGradientSearchMethod.txx  itkAffineMutualInformationImageMetric.h  itkAffineMutualInformationImageMetric.txx  itkAffineMutualInformationImageMetricMetric.h  itkAffineMutualInformationImageMetricMetric.txx  itkAnchorCloseImageFilter.h  itkAnchorDilateImageFilter.h  itkAnchorErodeDilateImageFilter.h  itkAnchorErodeDilateImageFilter.txx  itkAnchorErodeDilateLine.h  itkAnchorErodeDilateLine.txx  itkAnchorErodeImageFilter.h  itkAnchorHistogram.h  itkAnchorOpenCloseImageFilter.h  itkAnchorOpenCloseImageFilter.txx  itkAnchorOpenCloseLine.h  itkAnchorOpenCloseLine.txx  itkAnchorOpenImageFilter.h  itkAnchorUtilities.h  itkAnchorUtilities.txx  itkAnisotropicFourthOrderLevelSetImageFilter.h  itkAnisotropicFourthOrderLevelSetImageFilter.txx  itkAntiAliasBinaryImageFilter.h  itkAntiAliasBinaryImageFilter.txx  itkAutomaticTopologyMeshSource.h  itkAutomaticTopologyMeshSource.txx  itkBalloonForce3DFilter.h  itkBalloonForce3DFilter.txx  itkBalloonForceFilter.cpp  itkBalloonForceFilter.h  itkBalloonForceFilter.txx  itkBasicDilateImageFilter.h  itkBasicDilateImageFilter.txx  (+618 more)
Code/BasicFilters/: CMakeLists.txt  itkAbsImageFilter.h  itkAbsoluteValueDifferenceImageFilter.h  itkAccumulateImageFilter.h  itkAccumulateImageFilter.txx  itkAcosImageFilter.h  itkAdaptImageFilter.h  itkAdaptiveHistogramEqualizationImageFilter.h  itkAdaptiveHistogramEqualizationImageFilter.txx  itkAdd2ImageFilter.h  itkAddImageFilter.h  itkAffineTransformMeshFilter.h  itkAffineTransformMeshFilter.txx  itkAndImageFilter.h  itkAnisotropicDiffusionEquation.h  itkAnisotropicDiffusionFunction.h  itkAnisotropicDiffusionImageFilter.h  itkAnisotropicDiffusionImageFilter.txx  itkApproximateSignedDistanceMapImageFilter.h  itkApproximateSignedDistanceMapImageFilter.txx  itkAsinImageFilter.h  itkAtan2ImageFilter.h  itkAtanImageFilter.h  itkBSplineCenteredL2ResampleImageFilterBase.h  itkBSplineCenteredL2ResampleImageFilterBase.txx  itkBSplineCenteredResampleImageFilterBase.h  itkBSplineCenteredResampleImageFilterBase.txx  itkBSplineDecompositionImageFilter.h  itkBSplineDecompositionImageFilter.txx  itkBSplineDownsampleImageFilter.h  itkBSplineDownsampleImageFilter.txx  itkBSplineInterpolateImageFunction.h  itkBSplineInterpolateImageFunction.txx  itkBSplineL2ResampleImageFilterBase.h  itkBSplineL2ResampleImageFilterBase.txx  itkBSplineResampleImageFilterBase.h  itkBSplineResampleImageFilterBase.txx  itkBSplineResampleImageFunction.h  itkBSplineUpsampleImageFilter.h  itkBSplineUpsampleImageFilter.txx  (+569 more)
Code/Common/: CMakeLists.txt  Makefile.in  VNLIterativeSparseSolverTraits.h  VNLSparseLUSolverTraits.h  itkAbsImageAdaptor.h  itkAcosImageAdaptor.h  itkAddImageAdaptor.h  itkAddPixelAccessor.h  itkAffineMutualInformation.h  itkAffineMutualInformation.txx  itkAffineRegistrationTransform.h  itkAffineRegistrationTransform.txx  itkAffineTransform.h  itkAffineTransform.txx  itkAffineTransformation.h  itkAffineTransformation.txx  itkAnisotropicDiffusionImageFilter.h  itkAnisotropicDiffusionImageFilter.txx  itkAnnulusOperator.h  itkAnnulusOperator.txx  itkArray.h  itkArray.txx  itkArray2D.h  itkArray2D.txx  itkAsinImageAdaptor.h  itkAtanImageAdaptor.h  itkAutoPointer.h  itkAutoPointerDataObjectDecorator.h  itkAutoPointerDataObjectDecorator.txx  itkAutoVectorContainer.cxx  itkAutoVectorContainer.h  itkAzimuthElevationToCartesianTransform.h  itkAzimuthElevationToCartesianTransform.txx  itkBSplineDeformableTransform.h  itkBSplineDeformableTransform.txx  itkBSplineDerivativeKernelFunction.h  itkBSplineInterpolateImageFunction.h  itkBSplineInterpolateImageFunction.txx  itkBSplineInterpolationWeightFunction.h  itkBSplineInterpolationWeightFunction.txx  (+1158 more)
Code/GPU/: CMakeLists.txt  ImageOps.cl  itkGPUImageDataManager.txx  itkGPUImageTest.cxx  itkOclUtil.cxx  (+4 more)
Examples/: .clang-format  CMakeLists.txt  README.md  README.txt  SearchScript.sh
Testing/: CMakeLists.txt  CTestConfig.cmake  DartConfig.cmake
Utilities/: CMakeLists.txt  FindLIBXML2.cmake  ITKFindFLTK.cmake  ITKFindGLUT.cmake  ITKFindVTK.cmake  README.itklibxml2  README.kwsys  README.vxl  SetupForDevelopment.sh  UploadBinaryData.sh  gdcm_charls.h  gdcm_expat.h  gdcm_openjpeg.h  gdcm_zlib.h  hooks.sh  itkThirdParty.cmake  itkThirdParty.h.in  itk_jpeg.h  itk_png.h  itk_png.h.in  itk_tiff.h  itk_zlib.h  itk_zlib.h.in
Wrapping/: CMakeLists.txt  CMakeUtilityFunctions.cmake  ConfigureWrapping.cmake  DoxygenConfig.cmake  FindCABLE.cmake  FindWrapITK.cmake.in  GlobalIdxFilesList.txt.in  TypedefMacros.cmake  WrapBasicTypes.cmake  WrapITKConfig.cmake.in  WrapITKTypes.cmake  WrappingOptions.cmake  __init__.py  itkWrapSetup.cmake  testModules.sh
c++/: CMakeLists.txt
core/: CMakeLists.txt  vxl_config.h.in  vxl_copyright.h  vxl_version.h
hl/: CMakeLists.txt
v3p/: CMakeLists.txt
(+38017 files in other folders)
